# pse

./: .gitignore  Cargo.toml  README.md  bench_results.json  claude_code_prompt_pse_extraction.md
adapters/pse-adapter-airquality/: Cargo.toml
adapters/pse-adapter-airquality/examples/: airquality.rs
adapters/pse-adapter-airquality/src/: lib.rs
adapters/pse-adapter-binance/: Cargo.toml
adapters/pse-adapter-binance/examples/: observe_btc.rs
adapters/pse-adapter-binance/src/: lib.rs
adapters/pse-adapter-entsoe/: Cargo.toml
adapters/pse-adapter-entsoe/examples/: observe_grid.rs
adapters/pse-adapter-entsoe/src/: lib.rs
adapters/pse-adapter-iot/: Cargo.toml
adapters/pse-adapter-iot/examples/: iot.rs
adapters/pse-adapter-iot/src/: lib.rs
adapters/pse-adapter-modelmon/: Cargo.toml
adapters/pse-adapter-modelmon/examples/: model_monitor.rs
adapters/pse-adapter-modelmon/src/: lib.rs
adapters/pse-adapter-seismo/: Cargo.toml
adapters/pse-adapter-seismo/examples/: seismo.rs
adapters/pse-adapter-seismo/src/: lib.rs
adapters/pse-adapter-syslog/: Cargo.toml
adapters/pse-adapter-syslog/examples/: syslog.rs
adapters/pse-adapter-syslog/src/: lib.rs
adapters/pse-adapter-tabular/: Cargo.toml
adapters/pse-adapter-tabular/examples/: quality_check.rs
adapters/pse-adapter-tabular/src/: lib.rs
adapters/pse-adapter-vitals/: Cargo.toml
adapters/pse-adapter-vitals/examples/: vitals.rs
adapters/pse-adapter-vitals/src/: lib.rs
adapters/pse-adapter-weather/: Cargo.toml
adapters/pse-adapter-weather/examples/: weather.rs
adapters/pse-adapter-weather/src/: lib.rs
crates/pse/: Cargo.toml
crates/pse-capsule/: Cargo.toml
crates/pse-capsule/src/: lib.rs
crates/pse-cascade/: Cargo.toml
crates/pse-cascade/src/: lib.rs
crates/pse-cli/: Cargo.toml
crates/pse-cli/src/: main.rs
crates/pse-constraint/: Cargo.toml
crates/pse-constraint/src/: lib.rs
crates/pse-core/: Cargo.toml
crates/pse-core/examples/: accumulation_proof.rs  bench_core.rs  bench_full.rs  bench_topology.rs  cross_session_proof.rs  financial_ticks.rs  sensor_stream.rs  synthetic.rs
crates/pse-core/src/: lib.rs
crates/pse-evidence/: Cargo.toml
crates/pse-evidence/src/: lib.rs
crates/pse-extract/: Cargo.toml
crates/pse-extract/src/: lib.rs
crates/pse-gateway/: Cargo.toml
crates/pse-gateway/src/: lib.rs
crates/pse-graph/: Cargo.toml
crates/pse-graph/src/: lib.rs
crates/pse-manifest/: Cargo.toml
crates/pse-manifest/src/: lib.rs
crates/pse-memory/: Cargo.toml
crates/pse-memory/src/: lib.rs
crates/pse-navigator/: Cargo.toml
crates/pse-navigator/examples/: triton_explore.rs
crates/pse-navigator/src/: lib.rs
crates/pse-net/: Cargo.toml
crates/pse-net/examples/: swarm_demo.rs
crates/pse-net/src/: acceptance.rs  config.rs  envelope.rs  lib.rs  message.rs  node.rs  transport.rs
crates/pse-pmhd/: Cargo.toml
crates/pse-pmhd/src/: lib.rs
crates/pse-registry/: Cargo.toml
crates/pse-registry/src/: lib.rs
crates/pse-replay/: Cargo.toml
crates/pse-replay/src/: lib.rs
crates/pse-scale/: Cargo.toml
crates/pse-scale/src/: lib.rs
crates/pse-scheduler/: Cargo.toml
crates/pse-scheduler/src/: lib.rs
crates/pse-store/: Cargo.toml
crates/pse-store/src/: lib.rs
crates/pse-swarm/: Cargo.toml
crates/pse-swarm/src/: lib.rs  policy.rs  report.rs
crates/pse-topology/: Cargo.toml
crates/pse-topology/src/: lib.rs
crates/pse-types/: Cargo.toml
crates/pse-types/src/: lib.rs
crates/pse-wasm/: Cargo.toml
crates/pse-wasm/src/: lib.rs
crates/pse/src/: lib.rs
tests/integration/: smoke_test.rs
tools/pse-audit/: Cargo.toml
tools/pse-audit/src/: lib.rs
web/: build.sh  index.html  pse.js  style.css
