[package]
name = "pse-adapter-airquality"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PSE domain adapter for OpenAQ air quality data"

[dependencies]
pse-types = { path = "../../crates/pse-types" }
pse-core = { path = "../../crates/pse-core" }
pse-graph = { path = "../../crates/pse-graph" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
