[package]
name = "pse-adapter-modelmon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PSE adapter for ML model monitoring and drift detection"

[dependencies]
pse-types = { path = "../../crates/pse-types" }
pse-core = { path = "../../crates/pse-core" }
pse-graph = { path = "../../crates/pse-graph" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = "1"
