[package]
name = "pse-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DomainAdapter trait and Engine orchestrator for PSE"

[dependencies]
pse-types = { path = "../pse-types" }
pse-graph = { path = "../pse-graph" }
pse-extract = { path = "../pse-extract" }
pse-cascade = { path = "../pse-cascade" }
pse-evidence = { path = "../pse-evidence" }
pse-replay = { path = "../pse-replay" }
pse-constraint = { path = "../pse-constraint" }
pse-registry = { path = "../pse-registry" }
pse-manifest = { path = "../pse-manifest" }
pse-scheduler = { path = "../pse-scheduler" }
pse-topology = { path = "../pse-topology" }
pse-scale = { path = "../pse-scale" }
pse-navigator = { path = "../pse-navigator" }
pse-capsule = { path = "../pse-capsule" }
pse-swarm = { path = "../pse-swarm" }
pse-pmhd = { path = "../pse-pmhd" }
pse-memory = { path = "../pse-memory" }
pse-net = { path = "../pse-net", optional = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pse-net = { path = "../pse-net" }

[features]
default = []
swarm = ["pse-net"]
