[package]
name = "pse-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Observation graph, entity tracking, and persistent hash-DAG for PSE"

[dependencies]
pse-types = { path = "../pse-types" }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }
thiserror = { workspace = true }
