[package]
name = "pse-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Persistent pattern memory — topological similarity index for cross-session learning"

[dependencies]
pse-types = { path = "../pse-types" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
