[package]
name = "pse-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Distributed swarm networking for PSE — TCP peer-to-peer crystal propagation with Kuramoto-inspired acceptance"

[dependencies]
pse-types = { path = "../pse-types" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }
