[package]
name = "pse-pmhd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Adversarial drill engine, hypothesis testing, monolith generation for PSE"

[dependencies]
pse-types = { path = "../pse-types" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
