[package]
name = "pse-replay"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Deterministic replay engine for PSE"

[dependencies]
pse-types = { path = "../pse-types" }
pse-evidence = { path = "../pse-evidence" }
serde = { workspace = true }
serde_json = { workspace = true }
