[package]
name = "pse-scale"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-scale observation, Kuramoto clustering, Fiedler bisection for PSE"

[dependencies]
pse-types = { path = "../pse-types" }
pse-graph = { path = "../pse-graph" }
pse-topology = { path = "../pse-topology" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
