[package]
name = "pse-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "SQLite persistence layer for crystals, traces, and metrics"

[dependencies]
pse-types = { path = "../pse-types" }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
