[package]
name = "pse-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Persistence layer for crystals, traces, and metrics"

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]
memory-only = []

[dependencies]
pse-types = { path = "../pse-types" }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true, optional = true }
chrono = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
