[package]
name = "pse-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core shared types for PSE: crystals, observations, temporal primitives"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
sha2 = { workspace = true }
ordered-float = { workspace = true }
chrono = { workspace = true }
